# finance_feedback_engine

./: .coveragerc  .dockerignore  .env.backup  .env.dev.example  .env.development  .env.example  .env.production.example  .env.staging.example  .env.test  .env.test.example  .env.testing  .flake8  .gitignore  .pre-commit-config-black-temp.yaml  .pre-commit-config-enhanced.yaml  .pre-commit-config-progressive.yaml  .pre-commit-config.yaml  .roomodes  .secrets.baseline  .yamllint.yml  =5.3.0  AGENT_EXAMPLES.md  AGENT_OPTIMIZATION_RECOMMENDATIONS.md  AGENT_ROLE_INFRASTRUCTURE_OPTIMIZATION.md  AGENT_SYSTEM_IMPLEMENTATION_STATUS.md  ALPHA_VANTAGE_RATE_LIMITER_CHANGES.md  ANALYSIS_ONLY_MODE_CODE_INTERACTION.md  ANALYSIS_ONLY_MODE_CREDENTIAL_VALIDATION.md  ANALYSIS_ONLY_MODE_QUICK_REFERENCE.txt  ANALYSIS_ONLY_MODE_VERIFICATION_REPORT.md  ANALYSIS_ONLY_MODE_VERIFICATION_SUMMARY.md  API_AUTH_MIGRATION_GUIDE.md  API_AUTH_QUICK_REF.md  AUTONOMOUS_REVENUE_DEPARTMENT_DESIGN.md  BACKTESTER_REFACTOR_SUMMARY.md  BACKTESTER_TRAINING_FIRST_COMPLETE.md  BACKTESTER_TRAINING_FIRST_QUICKREF.md  BACKTESTING_DATA_ANALYSIS.md  BACKTESTING_MIGRATION_STATUS.md  BACKTEST_ARCHITECTURE_FIX.md  (+373 more)
.claude/: settings.json
.dvc/: config
.githooks/: README.md  pre-commit
.github/: copilot-instructions.md  markdown-link-check-config.json  renovate.json
.playwright-mcp/: dashboard-final.md
.pre-commit-hooks/: README.md  prevent-secrets.py
.qwen/: PROJECT_SUMMARY.md
.roo/: mcp.json
.serena/: project.yml
C4-Documentation/: README.md  c4-code-finance_feedback_engine-agent.md  c4-code-finance_feedback_engine-api.md  c4-code-finance_feedback_engine-auth.md  c4-code-finance_feedback_engine-backtesting.md  c4-code-finance_feedback_engine-cli-commands.md  c4-code-finance_feedback_engine-cli-formatters.md  c4-code-finance_feedback_engine-cli-validators.md  c4-code-finance_feedback_engine-cli.md  c4-code-finance_feedback_engine-dashboard.md  c4-code-finance_feedback_engine-data_providers.md  c4-code-finance_feedback_engine-decision_engine.md  c4-code-finance_feedback_engine-deployment-tests.md  c4-code-finance_feedback_engine-deployment.md  c4-code-finance_feedback_engine-integrations.md  c4-code-finance_feedback_engine-learning.md  c4-code-finance_feedback_engine-memory.md  c4-code-finance_feedback_engine-metrics.md  c4-code-finance_feedback_engine-monitoring-output_capture.md  c4-code-finance_feedback_engine-monitoring.md  c4-code-finance_feedback_engine-observability.md  c4-code-finance_feedback_engine-optimization.md  c4-code-finance_feedback_engine-persistence.md  c4-code-finance_feedback_engine-pipelines-batch.md  c4-code-finance_feedback_engine-pipelines-storage.md  c4-code-finance_feedback_engine-pipelines.md  c4-code-finance_feedback_engine-risk.md  c4-code-finance_feedback_engine-root.md  c4-code-finance_feedback_engine-security.md  c4-code-finance_feedback_engine-trading_platforms.md  c4-code-finance_feedback_engine-utils.md  c4-component-ai-decision-engine.md  c4-component-backtesting-framework.md  c4-component-command-line-interface.md  c4-component-market-data-providers.md  c4-component-monitoring-observability.md  c4-component-portfolio-memory-learning.md  c4-component-risk-management.md  c4-component-trading-agent.md  c4-component-trading-platform-integration.md  (+4 more)
alembic/: env.py
config/: agent.yaml  alerts.yaml  btc_production_params.yaml  config.backtest.yaml  config.copilot.example.yaml  config.ensemble.example.yaml  config.example.yaml  config.local.yaml.orig  config.test.mock.yaml  config.yaml  config.yaml.backup_20260216_181230  config.yaml.backup_gemma3_removal_20260331_190134  grafana_dashboard_template.json  ray_auth.example.sh  telegram.yaml  telegram.yaml.example  temp_stacking_config.yaml
data/: .models_installed  ensemble_history.json  open_positions_state.json  pair_selection_thompson.json  thompson_sampling_stats.json
demos/: DEMO_SUMMARY.md  demo_agent_portfolio.py  demo_dashboard.py  demo_default_features.py  demo_features.py  demo_install_deps.py  demo_live_monitoring.sh  demo_long_term_performance.py  demo_multi_timeframe_pulse.py  demo_multiplatform_dashboard.py  demo_new_features.sh  demo_oanda_features.py  demo_portfolio_memory.py  demo_pulse_integration.py  demo_wipe_decisions.py
docker/: nginx.conf
docs/: AGENT_CONTROL_GUIDE.md  AGENT_PERFORMANCE_IMPROVEMENT_PLAN.md  AI_PROVIDERS.md  API_AUTHENTICATION.md  ASSET_PAIR_VALIDATION.md  AUTOMATED_REFACTORING.md  AUTOMATED_REFACTORING_QUICKSTART.md  AUTOMATIC_DEPLOYMENT.md  AUTONOMOUS_TRADING.md  BACKTESTING.md  BOT_EXECUTION_GUIDE.md  CI_CD_BEFORE_AFTER.md  CI_CD_CLEANUP_SUMMARY.md  CI_CD_PIPELINE.md  CLI_BEHAVIOR_REFERENCE.md  CONFIG_ENV_VAR_LOADING.md  CONFIG_PRECEDENCE.md  CONFIG_VALIDATION_README.md  CONFIG_VALIDATION_REPORT.md  COVERAGE_IMPROVEMENT_PLAN.md  CUDA_MODEL_COMPATIBILITY.md  DASHBOARD_IMPLEMENTATION_SUMMARY.md  DATA_PIPELINE_ARCHITECTURE.md  DATA_PIPELINE_QUICKSTART.md  DECISION_ENGINE_ARCHITECTURE.md  DEPENDENCY_UPDATE_PLAN.md  DEPLOYMENT.md  DEPRECATED_FEATURES.md  DEVOPS_DEPLOYMENT.md  DEVOPS_QUICKSTART.md  DOCKER_FRONTEND_GUIDE.md  DYNAMIC_WEIGHT_ADJUSTMENT.md  ENSEMBLE_FALLBACK_SYSTEM.md  ENSEMBLE_FALLBACK_VISUAL.md  ENSEMBLE_SYSTEM.md  EXPERIMENT_WORKFLOW.md  FFE_ROADMAP.md  GIT_HOOKS_BEFORE_AFTER.md  GIT_HOOKS_CLEANUP_SUMMARY.md  GIT_HOOKS_QUICKREF.md  (+54 more)
examples/: README.md  custom_platform.py  dynamic_weight_adjustment_example.py  ensemble_example.py  live_monitoring_example.py  monitoring_aware_decisions.py  oanda_forex_example.py  plane_ticketing_example.py  position_sizing_example.py  sentiment_macro_example.py
finance_feedback_engine/: LAYER2_DEEP_SCAN_REPORT.md  __init__.py  core.py  database.py  exceptions.py
frontend/: .dockerignore  .env.example  .env.local.example  .env.production  .gitignore  CONFIGURATION_QUICK_START.md  CONFIGURATION_SECURITY_REPORT.md  CONFIGURATION_VALIDATION_SUMMARY.md  Dockerfile  ENVIRONMENT_SETUP.md  README.md  REALTIME_MIGRATION_GUIDE.md  REALTIME_QUICKREF.md  nginx.conf  package-lock.json  package.json  playwright.config.ts  setup_frontend.sh  vite.config.ts  (+3 more)
(+2268 files in other folders)
