[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-feedback-engine-2.0"
version = "2.0.0"
description = "A sophisticated Python-based trading system designed to provide validation and feedback for financial data processing"
readme = "README.md"
authors = [{name = "Three Rivers Tech", email = "dev@threerivers.tech"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Core dependencies would be listed here
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
show_error_codes = true
mypy_path = ["finance_feedback_engine"]

[[tool.mypy.overrides]]
module = [
    "coinbase_advanced.*",
    "oandapyV20.*",
    "oandapyV20.*.*",
    "alpha_vantage.*",
    "yfinance.*",
    "numpy.*",
    "pandas.*",
    "requests.*",
    "flask.*",
    "rich.*",
    "click.*",
    "pyngrok.*",
    "redis.*",
    "apscheduler.*",
    "sqlalchemy.*",
    "pydantic.*",
    "tqdm.*",
    "matplotlib.*",
]
ignore_missing_imports = true

[tool.pylint.MASTER]
ignore-paths = ["^build/", "^dist/", "^.*\\.egg-info/"]
load-plugins = ["pylint.extensions.docparams"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-statements",
    "too-many-lines",
    "duplicate-code",
    "fixme",
    "c-extension-no-member",
    "too-many-branches",
    "too-many-return-statements",
    "too-many-nested-blocks",
]

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint.TYPECHECK]
ignored-modules = [
    "coinbase_advanced",
    "oandapyV20",
    "alpha_vantage",
    "yfinance",
    "numpy",
    "pandas",
    "requests",
    "flask",
    "rich",
    "click",
    "pyngrok",
    "redis",
    "apscheduler",
    "sqlalchemy",
    "pydantic",
    "tqdm",
    "matplotlib",
]