[build-system]
requires = ["setuptools>=78.1.1", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-feedback-engine-2.0"
version = "0.9.9"
description = "A sophisticated Python-based trading system designed to provide validation and feedback for financial data processing"
readme = "README.md"
authors = [{name = "Three Rivers Tech", email = "dev@threerivers.tech"}]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "scipy>=1.14.0",
    "requests>=2.32.3",
    "aiohttp>=3.13.1",
    "aiohttp-retry>=2.8.3",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.3",
    "numpy>=2.2.0,<2.4.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "alpha-vantage>=2.3.1",
    "coinbase-advanced-py>=1.7.0",
    "oandapyV20>=0.7.2",
    "pyyaml>=6.0.2",
    "click>=8.1.7",
    "rich>=13.9.4",
    "packaging>=24.2",
    "tqdm>=4.66.5",
    "python-dateutil>=2.9.0",
    "pyarrow>=14.0.0",
    "cachetools>=6.2.3",
    "scikit-learn>=1.7.0",
    "tenacity>=9.0.0",
    "ollama>=0.5.10",
    "optuna>=4.2.0",
    "mlflow>=2.9.0",
    "dvc>=3.0.0",
    "python-telegram-bot>=22.5",
    "pandas-ta>=0.3.14b0",
    "fastapi>=0.120.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.1",
    "urllib3>=2.3.0",
    "redis>=5.2.1",
    "websockets>=12.0,<14.0",
    "certifi>=2025.10.5",
    "idna>=3.7",
    "jinja2>=3.1.6",
    # OpenTelemetry instrumentation
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-jaeger-thrift>=1.21.0",
    "opentelemetry-exporter-otlp-proto-grpc>=0.42b0",
    "opentelemetry-exporter-prometheus>=0.42b0",
    "opentelemetry-instrumentation>=0.42b0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "opentelemetry-instrumentation-aiohttp-client>=0.42b0",
    "opentelemetry-instrumentation-requests>=0.42b0",
]

[project.optional-dependencies]
dev = [
    "freezegun>=1.5.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.5.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "bandit>=1.7.5",
    "pre-commit>=3.5.0",
    "pyngrok>=7.0.0,<8.0.0",
]
pipeline = [
    "delta-spark==3.0.0",
    "pyspark==3.5.0",
    "pyarrow>=15.0.0",
    "great-expectations>=0.18.0",
    "dbt-core>=1.7.0",
    "dbt-spark>=1.7.0",
    "apache-airflow>=2.7.0",
    "apache-airflow-providers-amazon>=8.0.0",
    "apache-airflow-providers-apache-spark>=4.0.0",
    "apache-airflow-providers-dbt-cloud>=3.0.0",
    "kafka-python>=2.0.2",
    "confluent-kafka>=2.3.0",
    "prometheus-client>=0.19.0",
    "grafana-client>=4.0.0",
    "boto3>=1.34.0",
    "s3fs>=2024.2.0",
    "minio>=7.2.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "cryptography>=42.0.0",
]

[tool.mypy]
python_version = "3.12"

# NOTE: Pre-commit runs mypy across a wide portion of the repo (including tests,
# scripts, and examples). Strict typing across the entire tree is not currently
# enforced. This is intentionally relaxed to keep pre-commit green without a
# large typing sweep.
ignore_errors = true

warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

# Relax strictness to avoid requiring annotations everywhere.
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false

show_error_codes = true
mypy_path = ["finance_feedback_engine"]

# Exclude directories that cause module conflicts
exclude = [
    "experiments/",
    "build/",
    "dist/",
    ".*\\.egg-info/"
]

[[tool.mypy.overrides]]
module = [
    "coinbase_advanced.*",
    "oandapyV20.*",
    "oandapyV20.*.*",
    "alpha_vantage.*",
    "yfinance.*",
    "numpy.*",
    "pandas.*",
    "requests.*",
    "flask.*",
    "rich.*",
    "click.*",
    "pyngrok.*",
    "redis.*",
    "apscheduler.*",
    "sqlalchemy.*",
    "pydantic.*",
    "tqdm.*",
    "matplotlib.*",
]
ignore_missing_imports = true

[tool.pylint.MASTER]
ignore-paths = ["^build/", "^dist/", "^.*\\.egg-info/"]
load-plugins = ["pylint.extensions.docparams"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-statements",
    "too-many-lines",
    "duplicate-code",
    "fixme",
    "c-extension-no-member",
    "too-many-branches",
    "too-many-return-statements",
    "too-many-nested-blocks",
]

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint.TYPECHECK]
ignored-modules = [
    "coinbase_advanced",
    "oandapyV20",
    "alpha_vantage",
    "yfinance",
    "numpy",
    "pandas",
    "requests",
    "flask",
    "rich",
    "click",
    "pyngrok",
    "redis",
    "apscheduler",
    "sqlalchemy",
    "pydantic",
    "tqdm",
    "matplotlib",
]

[tool.bandit]
exclude_dirs = ["tests", "examples", "scripts", "experiments"]
# B101: Allow assert statements in production code for invariant checking
# B608: False positive in validator.py - error message formatting mistaken for SQL
skips = ["B101", "B608"]

[tool.pydocstyle]
convention = "google"
add-ignore = ["D401", "D107"]  # Imperative mood, __init__ docstrings
max-line-length = 88
